--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,17 @@
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.3/dist/confetti.browser.min.js"></script>
+    <script>
+      (function () {
+        const currentDate = new Date();
+        if (currentDate.getDate() === 12) {
+          confetti({
+            particleCount: 100,
+            spread: 70,
+            origin: { y: 0.6 },
+          });
+        }
+      })();
+    </script>
   </body>
 </html>
